version 20070614_4
Added much more sophistication to the link tree creation.

version 20070614_3
You can now encrypt and decrypt multiple line pages.

version 20070614_2
Made a small post-decryption addition to the Blowfish code to strip
the block cipher padding.

version 20070614_1
Fixed an Internet Explorer bug where it can't handle XHTML formatted script
elements.  Since that's fixed, I re-added the keyboard shortcuts, but
changed the key to w, since f was a bad key (it's used in the CTRL-f
for "find" key combo).

version 20070613_2
Moved potoss development to Google Code.

version 20070613_1
Temporarily removed the js shortcuts becaused they caused all content to
disappear in IE.  Whoops!!!  Added IE back into the selenium tests so
we'll catch that issue if it pops up again.

version 20070611_1
Added the PH_page_links URL, which shows all the links which originate
and propogate from a page.

version 20070610_3
Added configurable sex (just a simple he/she) for the administrator.

version 20070610_2
Moved the get_or_put.pl file to "utils".  Added a link to take you to
the latest, HEAD, revision of a page, like if you come in from an RSS feed
which is pointing to an earlier revision.
Added some notes about installation, though they are still a little patchy.

version 20070610_1
Added the ability to use keyboard shortcuts.  The first one is 'f',
which brings up some page options when looking at the text.

version 20070608_2
Rearranged the advanced options a bit.  Added a note about double-clicking.
  
version 20070608_1
* In configuration file:
    ** Die instead of warning if missing data directories.
    ** Uses a dot (for current directory) instead of ENV variable.
* Changed the selenium test directory.  Ultimately it should be in the
  configuration file as well, but for now it's not.
* Added two #TEMPLATE_ notes to the code.  These allow Gordon to do
  some simple code substitution required for pageoftext.com (adding a