@@ -1,3 +1,6 @@
+version 20070615_1
+Added the ability to do a very simple search all your linked pages.
+
 version 20070614_4
 Added much more sophistication to the link tree creation.
 
